--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "arraybuffer.prototype.slice": "^1.0.3",
     "available-typed-arrays": "^1.0.7",
     "balanced-match": "^1.0.2",
+    "bcryptjs": "^2.4.3",
     "binary-extensions": "^2.3.0",
     "body-parser": "^1.20.2",
     "brace-expansion": "^1.1.11",
@@ -63,6 +64,7 @@
     "didyoumean": "^1.2.2",
     "dlv": "^1.1.3",
     "doctrine": "^3.0.0",
+    "dotenv": "^16.4.5",
     "eastasianwidth": "^0.2.0",
     "ee-first": "^1.1.1",
     "electron-to-chromium": "^1.4.715",
@@ -197,6 +199,8 @@
     "mime-types": "^2.1.35",
     "minimatch": "^3.1.2",
     "minipass": "^7.0.4",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.2.4",
     "ms": "^2.1.2",
     "mz": "^2.7.0",
     "nanoid": "^3.3.7",
