--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "type": "module",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
     "abbrev": "^1.1.1",
     "accepts": "^1.3.8",
     "acorn": "^8.11.3",
@@ -258,6 +259,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-is": "^16.13.1",
+    "react-redux": "^9.1.0",
     "react-refresh": "^0.14.0",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
