--- a/package.json
+++ b/package.json
@@ -265,6 +265,7 @@
     "react-router-dom": "^6.22.3",
     "read-cache": "^1.0.0",
     "readdirp": "^3.6.0",
+    "redux-persist": "^6.0.0",
     "reflect.getprototypeof": "^1.0.6",
     "regexp.prototype.flags": "^1.5.2",
     "resolve": "^2.0.0-next.5",
