--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "content-type": "^1.0.5",
     "convert-source-map": "^2.0.0",
     "cookie": "^0.6.0",
+    "cookie-parser": "^1.4.6",
     "cookie-signature": "^1.0.6",
     "cross-spawn": "^7.0.3",
     "cssesc": "^3.0.0",
